<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="org.dan.droidcafe.MainActivity">
    <item
        android:id="@+id/action_contact"
        android:orderInCategory="100"
        android:title="@string/contact"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_order"
        android:orderInCategory="10"
        android:icon="@drawable/ic_shopping_cart"
        android:title="@string/action_order"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_status"
        android:orderInCategory="20"
        android:title="@string/action_status"
        android:icon="@drawable/status"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_favorites"
        android:icon="@drawable/favorites"
        android:orderInCategory="30"
        android:title="@string/action_favorites"
        app:showAsAction="always" />


</menu>